# daily-news

./: .env.example  .gitignore  README.md  pyproject.toml
daily_news/: celery.py  settings.py  urls.py
news/: apps.py  forms.py  models.py  tasks.py  urls.py
news/migrations/: 0001_initial.py
news/services/: article_scraper.py  llm_service.py  news_search.py
news/templates/news/: dashboard.html
src/: manage.py
src/daily_news/: asgi.py  settings.py  wsgi.py
src/news/: signals.py  views.py
src/news/management/commands/: test_news.py
src/news/services/: news_search.py
src/news/templates/news/: add_search_term.html  base.html  dashboard.html  delete_search_term.html  digest_detail.html  profile.html
